[package]
name = "nexe-unpacker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
cap-std = "0.23"
clap = "3"
indexmap = {version = "1", features = ["serde-1"]}
memchr = "2"
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1", features = ["preserve_order"]}
